# voice_assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py
assistant/: config.py  llm.py  stt.py  tts.py  wake_word.py
config/: config.json  config_faster.json
tests/: conftest.py  test_wakeword.py
voice_assistant/: config.py
