[project]
name = "voice-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "coqui-tts",
    "gerd>=0.4.0",
    "numpy>=1.26.4",
    "openai-whisper",
    "openwakeword>=0.6.0",
    "optimum>=1.22.0",
    "pyaudio>=0.2.14",
    "scipy>=1.14.1",
    "speechrecognition>=3.10.4",
    "ruff>=0.6.6",
    "torch>2.0.1",
    "transformers>=4.42.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.6",
]

[tool.uv.sources]
gerd = { git = "https://github.com/caretech-owl/gerd.git" }
openai-whisper = { git = "https://github.com/openai/whisper.git" }
coqui-tts = { git = "https://github.com/idiap/coqui-ai-TTS" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
